--- a/StudentApplication/Web.config
+++ b/StudentApplication/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="DatabaseConnection"  connectionString=" Data Source=ASPIRE1639\SQLEXPRESS;Initial Catalog=Students_database;User ID=sa;Password=aspire@123" />
    
   </connectionStrings>
   <appSettings>
