--- a/StudentApplication.Model/StudentApplication.Model.csproj
+++ b/StudentApplication.Model/StudentApplication.Model.csproj
@@ -45,14 +45,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CourseModel.cs" />
-    <Compile Include="DepartmentModel.cs" />
-    <Compile Include="GradeModel.cs" />
-    <Compile Include="LecturerModel.cs" />
-    <Compile Include="LibraryModel.cs" />
-    <Compile Include="SemesterModel.cs" />
-    <Compile Include="StudentModel.cs" />
+    <Compile Include="DataModels\CourseModel.cs" />
+    <Compile Include="DataModels\DepartmentModel.cs" />
+    <Compile Include="DataModels\GradeModel.cs" />
+    <Compile Include="DataModels\LecturerModel.cs" />
+    <Compile Include="DataModels\LibraryModel.cs" />
+    <Compile Include="DataModels\SemesterModel.cs" />
+    <Compile Include="DataModels\StudentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AccountViewModels.cs" />
+    <Compile Include="ViewModels\CourseVM.cs" />
+    <Compile Include="ViewModels\DepartmentVM.cs" />
+    <Compile Include="ViewModels\GradeVM.cs" />
+    <Compile Include="ViewModels\IdentityModels.cs" />
+    <Compile Include="ViewModels\LecturerVM.cs" />
+    <Compile Include="ViewModels\LibraryVM.cs" />
+    <Compile Include="ViewModels\StudentVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
