--- a/StudentApplication/StudentApplication.csproj
+++ b/StudentApplication/StudentApplication.csproj
@@ -202,6 +202,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\HomePageController.cs" />
+    <Compile Include="Controllers\LibraryController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\SemesterController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
@@ -212,7 +213,6 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\LoginVM.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\SemesterVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -292,10 +292,11 @@
     <Content Include="Views\Teacher\DeptDetailsforTeacher.cshtml" />
     <Content Include="Views\Department\GetDepartmentDetails.cshtml" />
     <Content Include="Views\Department\StaffDetailsbyDept.cshtml" />
+    <Content Include="Views\Library\GetLibraryDetails.cshtml" />
+    <Content Include="Views\Semester\GetSemesterDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Semester\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
